--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,23 @@
 :root {
-    --primary-color1: #00ffbf;
-    --primary-color2: #2227b7;
+  --primary-color1: #00ffbf;
+  --primary-color2: #2227b7;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+/* NAVBAR ----------------------------------------------- */
+nav {
+  padding: 20px;
+  margin: 0;
+  background-color: var(--primary-color2);
+}
+
+/* HEADING SECTION -------------------------------------- */
+.img-landing-hero {
+  width: 100%;
+  height: 600px;
+  object-fit: cover;
 }
