Imported Monserrat Google font

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
 :root {
   --primary-color1: #00ffbf;
   --primary-color2: #2227b7;
+  --primary-font: 'Montserrat', sans-serif;
 }
 
 html {
   font-size: 100%;
   box-sizing: border-box;
+  font-family: var(--primary-font);
 }
 
 body {
