--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
+@import url('animations.css');
+
 :root {
   --primary-color1: #00ffbf;
   --primary-color2: #2227b7;
@@ -38,6 +40,11 @@ nav .nav-title {
   color: var(--primary-color1);
   text-decoration: none;
   vertical-align: middle;
+
+  animation-name: appear;
+  animation-duration: 1s;
+  animation-iteration-count: initial;
+  animation-direction: normal;
 }
 
 nav .nav-title::before {
@@ -85,6 +92,11 @@ nav .nav-link {
   color: var(--primary-color1);
   text-decoration: none;
   vertical-align: middle;
+
+  animation-name: appear;
+  animation-duration: 1s;
+  animation-iteration-count: initial;
+  animation-direction: normal;
 }
 
 nav .nav-link::before {
