--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ nav .nav-title::before {
   content: "";
   position: absolute;
   height: 3px;
-  right: 0;
+  right: -20px;
   bottom: -10px;
   left: 0;
   background: linear-gradient(to right, var(--primary-color1) 0%, var(--primary-color2) 50%);
@@ -103,7 +103,7 @@ nav .nav-link::before {
   content: "";
   position: absolute;
   height: 3px;
-  right: 0;
+  right: -20px;
   bottom: -10px;
   left: 0;
   background: linear-gradient(to right, var(--primary-color1) 0%, var(--primary-color2) 50%);
