--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 /* NAVBAR ----------------------------------------------- */
@@ -24,7 +24,7 @@ nav {
   position: absolute;
   top: 0;
   width: 100%;
-  padding: 20px;
+  padding: 20px 0;
   margin: 0;
 }
 
@@ -134,4 +134,20 @@ nav .nav-link:hover::before {
   width: 100%;
   height: 90vh;
   object-fit: cover;
+}
+
+/* Grid */
+.section-headline {
+    display: grid;
+    grid-template-rows: (2, 1fr);
+}
+
+.head-item1 {
+    width: 100%;
+    grid-column: 2 / span 1;
+    grid-row: 1 / span 1;
+}
+
+.img-smartphone-hero {
+    width: 40%;
 }
