--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
-@import url('animations.css');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap");
+@import url("animations.css");
 
 :root {
   --primary-color1: #00ffbf;
   --primary-color2: #2227b7;
-  --primary-font: 'Montserrat', sans-serif;
+  --primary-font: "Montserrat", sans-serif;
 }
 
 html {
@@ -29,8 +29,8 @@ nav {
 }
 
 .flexbox {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 nav .nav-title {
@@ -54,7 +54,11 @@ nav .nav-title::before {
   right: -20px;
   bottom: -10px;
   left: 0;
-  background: linear-gradient(to right, var(--primary-color1) 0%, var(--primary-color2) 50%);
+  background: linear-gradient(
+    to right,
+    var(--primary-color1) 0%,
+    var(--primary-color2) 50%
+  );
   border-radius: 2px;
   opacity: 0;
   transition: all 0.3s;
@@ -67,7 +71,11 @@ nav .nav-title:hover::before {
   right: 0;
   bottom: -10px;
   left: 0;
-  background: linear-gradient(to right, var(--primary-color1) 25%, var(--primary-color2) 100%);
+  background: linear-gradient(
+    to right,
+    var(--primary-color1) 25%,
+    var(--primary-color2) 100%
+  );
   border-radius: 2px;
   opacity: 1;
   transition: all 0.3s;
@@ -79,14 +87,14 @@ nav .nav-links {
   align-items: center;
 }
 
-ul {        
-    display: flex;
-    align-items: center;
-    margin-right: 1.5em;
+ul {
+  display: flex;
+  align-items: center;
+  margin-right: 1.5em;
 }
 
 li {
-    list-style: none;
+  list-style: none;
 }
 
 nav .nav-link {
@@ -110,7 +118,11 @@ nav .nav-link::before {
   right: -50px;
   bottom: -10px;
   left: 0;
-  background: linear-gradient(to right, var(--primary-color1) 0%, var(--primary-color2) 50%);
+  background: linear-gradient(
+    to right,
+    var(--primary-color1) 0%,
+    var(--primary-color2) 50%
+  );
   border-radius: 2px;
   opacity: 0;
   transition: all 0.3s;
@@ -123,7 +135,11 @@ nav .nav-link:hover::before {
   right: 0;
   bottom: -10px;
   left: 0;
-  background: linear-gradient(to right, var(--primary-color1) 25%, var(--primary-color2) 100%);
+  background: linear-gradient(
+    to right,
+    var(--primary-color1) 25%,
+    var(--primary-color2) 100%
+  );
   border-radius: 2px;
   opacity: 1;
   transition: all 0.3s;
@@ -137,33 +153,66 @@ nav .nav-link:hover::before {
 }
 
 .section-headline {
-    display: flex;
-    position: relative;
-    top: -800px;
-    padding: 0 10%;
+  display: flex;
+  position: relative;
+  top: -800px;
+  padding: 0 10%;
 }
 
 /* Grid */
 .content-headline {
-    display: grid;
-    grid-template-rows: (2, 1fr);
+  display: grid;
+  grid-template-rows: (2, 1fr);
 }
 
 .head-item1 {
-    max-width: calc(80vw / 2);
-    grid-column: 1 / span 1;
-    grid-row: 1 / span 1;
-    color: white;
-    font-size: 2em;
+  max-width: calc(80vw / 2);
+  grid-column: 1 / span 1;
+  grid-row: 1 / span 1;
+  color: white;
+  font-size: 2em;
 }
 
 .head-item2 {
-    width: 100%;
-    grid-column: 2 / span 1;
-    grid-row: 1 / span 1;
+  width: 100%;
+  grid-column: 2 / span 1;
+  grid-row: 1 / span 1;
 }
 
 .img-smartphone-hero {
-    max-width: 80%;
-    margin: 0 auto;
+  max-width: 80%;
+  margin: 0 auto;
+}
+
+/* Grid */
+.content-features {
+  display: grid;
+  grid-template-rows: (3, 1fr);
+  gap: 2em;
+}
+
+.feature-item1,
+.feature-item2,
+.feature-item3 {
+  color: white;
+  background: var(--primary-color2);
+  font-size: 2em;
+  border-radius: 8px;
+  padding: 24px;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.5);
+}
+
+.feature-item1 {
+  grid-column: 1 / span 1;
+  grid-row: 1 / span 1;
+}
+
+.feature-item2 {
+  grid-column: 2 / span 1;
+  grid-row: 1 / span 1;
+}
+
+.feature-item3 {
+  grid-column: 3 / span 1;
+  grid-row: 1 / span 1;
 }
